ghost/Deployment-ghost.yml
---
kind: "Deployment"
apiVersion: "extensions/v1beta1"
metadata:
  annotations: {}
  name: "ghost"
  labels:
    nirmata.io/deployment.name: "ghost"
    nirmata.io/application.name: "ghost"
    nirmata.io/component: "ghost"
spec:
  replicas: 3
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      nirmata.io/application.name: "ghost"
      nirmata.io/component: "ghost"
    matchExpressions: []
  strategy:
    type: "RollingUpdate"
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    apiVersion: "v1"
    kind: "Pod"
    metadata:
      annotations: {}
      name: "ghost"
      labels:
        nirmata.io/deployment.name: "ghost"
        nirmata.io/application.name: "ghost"
        nirmata.io/component: "ghost"
    spec:
      terminationGracePeriodSeconds: 30
      nodeSelector: {}
      containers:
      - name: "ghost"
        image: "ghost:1.8"
        command: []
        args: []
        ports:
        - containerPort: 2368
          protocol: "TCP"
