ghost/NetworkPolicy-ghost-default.yml
---
kind: "NetworkPolicy"
apiVersion: "extensions/v1beta1"
spec:
  podSelector:
    matchLabels: {}
    matchExpressions: []
  policyTypes:
  - "Ingress"
  - "Egress"
metadata:
  annotations: {}
  name: "ghost-default"
  labels:
    nirmata.io/networkpolicy.name: "ghost-default"
    nirmata.io/application.name: "ghost"
